# podcast_agg

./: .gitignore  Cargo.toml  README.md  Summary.md
src/: config.rs  git_sync.rs  lib.rs  rss.rs  sqlite_reader.rs  state.rs  summarize.rs  transcript.rs  writer.rs
