[package]
name = "podcast_agg"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "podcast_agg"
path = "src/lib.rs"

[[bin]]
name = "refresh-subs"
path = "src/bin/refresh_subs.rs"

[[bin]]
name = "daily-digest"
path = "src/bin/daily_digest.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
feed-rs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slug = "0.1"
quick-xml = { version = "0.36", features = ["serialize"] }
html2text = "0.12"
futures = "0.3"
dotenvy = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
